Updated api endpoints
